<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="64dp"
        android:contentDescription="@string/app_name"
        android:gravity="center"
        android:scaleType="center"
        android:text="@string/code"
        android:textSize="24sp" />

    <EditText
        android:id="@+id/code_edit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="4dp"

        android:importantForAutofill="no"
        android:inputType="text"
        tools:ignore="LabelFor" />

    <Button
        android:id="@+id/code_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="4dp"
        android:text="@string/valid" />
</LinearLayout>